# atlas-cmake-tutorial

./: CMakeLists.txt  README.md
Exercise1/: CMakeLists.txt  README.md
Exercise1/Exercise1/: Calculator.h  Exercise1Dict.h  selection.xml
Exercise1/src/: Calculator.cxx
Exercise1/test/: test_calculator.py
Exercise2/: CMakeLists.txt  README.md
Exercise2/test/: test_calculator.py  test_calculator_boost.cxx  test_calculator_google.cxx
Exercise3/: CMakeLists.txt  README.md
Exercise3/cmake/: Findvectorclass.cmake
Exercise3/utils/: vectorized_add.cxx
